Added Ice Block Spawn
Created Ice Block Object that a player can spawn on click

--- a/TEST463/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TEST463/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,6 @@ MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem1=/Game/TEST463
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -205,14 +204,14 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,
 MyCharacter_C=
-CapsuleComponent=
+CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=MyCharacter_C.Physics.ConstraintsGroup,MyCharacter_C.Rendering.TextureStreaming,MyCharacter_C.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-SceneComponent=
+SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,MyCharacter_C.Physics.ConstraintsGroup,MyCharacter_C.Rendering.TextureStreaming,MyCharacter_C.Rendering.LOD,
 PostProcessComponent=PostProcessComponent.PostProcessVolume.Rendering Features,
 HUD_Health_C=
-StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,
 FireBP_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Spikes_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 K2Node_VariableSet=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.NewAxisMapping_2,InputSettings.Bindings.AxisMappings.NewAxisMapping_3,InputSettings.Bindings.AxisMappings.NewAxisMapping_4,InputSettings.Bindings.AxisMappings.NewAxisMapping_5,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.ActionMappings.Climb,InputSettings.Bindings.AxisMappings,MyCharacter_C.Physics.ConstraintsGroup,MyCharacter_C.Rendering.TextureStreaming,MyCharacter_C.Rendering.LOD,
@@ -220,7 +219,7 @@ MH_BP_Damage_Actor_C=StaticMeshActor.Physics.ConstraintsGroup,InputSettings.Bind
 Actor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Widget
+ContentBrowserTab1.SelectedPaths=/Game/Obstacles
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -260,31 +259,29 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Widget/HUD_Health.HUD_Health
-OpenAssetsAtExit=/Game/Obstacles/MH_BP_Damage_Actor.MH_BP_Damage_Actor
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MyCharacter.MyCharacter
+SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widget/HUD_Health
-MRUItem1=/Game/Obstacles/DamageComponent
-MRUItem2=/Game/Obstacles/MH_BP_DamageComponent
-MRUItem3=/Game/Obstacles/Spikes
-MRUItem4=/Game/TopDownBP/Blueprints/MyCharacter
-MRUItem5=/Game/Obstacles/MH_BP_Damage_Actor
-MRUItem6=/Engine/EngineFonts/Roboto
-MRUItem7=/Game/TopDownBP/Character/Spells/FireBP
-MRUItem8=/Game/TopDownBP/Character/Cube_fire
-MRUItem9=/Game/TopDownBP/Character/Char_PostProcess
-MRUItem10=/Game/TopDownBP/Materials/Occ_MPC
-MRUItem11=/Game/TopDownBP/Materials/Occ_MF
-MRUItem12=/Game/TopDownBP/Materials/Occlusion_Material
-MRUItem13=/Game/TopDownBP/Materials/NewMaterial
-MRUItem14=/Game/TopDownBP/Blueprints/NewBlueprint
-MRUItem15=/Game/TopDownBP/Blueprints/C_Ladder
-MRUItem16=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem17=/Game/TopDownBP/Blueprints/M_Cursor_Decal
-MRUItem18=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem19=/Game/TopDownBP/Blueprints/TopDownController
+MRUItem0=/Game/Obstacles/MH_BP_Damage_Actor
+MRUItem1=/Game/TopDownBP/Blueprints/MyCharacter
+MRUItem2=/Game/StarterContent/Particles/Materials/M_smoke_subUV
+MRUItem3=/Game/Obstacles/MH_BP_IceBlock
+MRUItem4=/Game/TopDownBP/Character/Spells/FireBP
+MRUItem5=/Game/Widget/HUD_Health
+MRUItem6=/Game/Obstacles/DamageComponent
+MRUItem7=/Game/Obstacles/MH_BP_DamageComponent
+MRUItem8=/Game/Obstacles/Spikes
+MRUItem9=/Engine/EngineFonts/Roboto
+MRUItem10=/Game/TopDownBP/Character/Cube_fire
+MRUItem11=/Game/TopDownBP/Character/Char_PostProcess
+MRUItem12=/Game/TopDownBP/Materials/Occ_MPC
+MRUItem13=/Game/TopDownBP/Materials/Occ_MF
+MRUItem14=/Game/TopDownBP/Materials/Occlusion_Material
+MRUItem15=/Game/TopDownBP/Materials/NewMaterial
+MRUItem16=/Game/TopDownBP/Blueprints/NewBlueprint
+MRUItem17=/Game/TopDownBP/Blueprints/C_Ladder
+MRUItem18=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem19=/Game/TopDownBP/Blueprints/M_Cursor_Decal
 
 [DetailCategories]
 TopDownGameMode_C.Tick=True
@@ -994,16 +991,16 @@ DataValidationSettings.Validation Scenarios=True
 GameplayTagsDeveloperSettings.GameplayTags=True
 LogVisualizerSettings.VisualLogger=True
 StaticMeshComponent.Variable=True
-StaticMeshComponent.TransformCommon=False
+StaticMeshComponent.TransformCommon=True
 StaticMeshComponent.Sockets=True
-StaticMeshComponent.StaticMesh=False
-StaticMeshComponent.Materials=False
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
 StaticMeshComponent.ComponentTick=True
-StaticMeshComponent.Physics=False
-StaticMeshComponent.Collision=False
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
 StaticMeshComponent.Lighting=False
 StaticMeshComponent.Rendering=False
-StaticMeshComponent.Navigation=True
+StaticMeshComponent.Navigation=False
 StaticMeshComponent.VirtualTexture=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.ComponentReplication=True
@@ -1190,6 +1187,31 @@ DamageComponent_C.Variable=True
 DamageComponent_C.Cooking=True
 DamageComponent_C.Collision=True
 MH_BP_Damage_Actor_C.Default=True
+MH_BP_IceBlock_C.Tick=True
+MH_BP_IceBlock_C.Replication=True
+MH_BP_IceBlock_C.Rendering=True
+MH_BP_IceBlock_C.Collision=True
+MH_BP_IceBlock_C.Actor=True
+MH_BP_IceBlock_C.Input=True
+ParticleSystemComponent.Variable=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Sockets=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.ComponentTick=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.Navigation=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.ComponentReplication=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
+ParticleSystemComponent.Events=True
+ParticleSystemComponent.Materials=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1250,6 +1272,9 @@ CharacterMovementComponent.Character Movement: Walking=True
 /Game/Obstacles/Spikes.Spikes=1
 /Engine/EngineFonts/Roboto.Roboto=0
 /Game/Obstacles/DamageComponent.DamageComponent=1
+/Game/StarterContent/Particles/Materials/M_smoke_subUV.M_smoke_subUV=1
+/Game/Obstacles/MH_BP_Damage_Actor.MH_BP_Damage_Actor=1
+/Game/Obstacles/MH_BP_IceBlock.MH_BP_IceBlock=1
 
 [MaterialEditor]
 PrimType=1
